<resources>
    <string name="app_name">ToDoApp</string>
    <string name="tv_task_title">Task Title</string>
    <string name="tv_content">Optional task content goes here...</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_all_tasks">All Tasks</string>
    <string name="menu_item_completed">Completed</string>
    <string name="menu_item_active">Active</string>
    <string name="toolbar_title_to_do_list">To-Do List</string>
    <string name="btn_description_add_task">Add Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_hint_task_title">Task Title</string>
    <string name="et_hint_description">Description</string>
    <string name="cb_completed">Completed</string>
    <string name="btn_save_task">Save Task</string>
    <string name="tv_todo_empty_info">There are currently no tasks\nPlease click the button in the lower right corner to add a new task</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_title_delete_task">Delete Task</string>
    <string name="dialog_message_confirm_delete">Are you sure you want to delete this task?</string>
    <string name="toast_empty_title">Please input the Title</string>
</resources>