<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:title="@string/menu_item_filter"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:menuCategory="container"
        android:orderInCategory="100"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_filter_all"
                android:title="@string/menu_item_all_tasks" />
            <item
                android:id="@+id/action_filter_completed"
                android:title="@string/menu_item_completed" />
            <item
                android:id="@+id/action_filter_active"
                android:title="@string/menu_item_active" />
        </menu>
    </item>
</menu>