<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.adam.app.todoapp.ui.AddEditTaskFragment">
    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_hint_task_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_hint_description"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="3"
        android:maxLines="6"
        android:gravity="top" />

    <CheckBox
        android:id="@+id/checkbox_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_completed" />

    <Button
        android:id="@+id/button_save_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_task"
        android:layout_marginTop="16dp"/>

</LinearLayout>